frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lugx-frontend
spec:
  type: ClusterIP                                  #LoadBalancer 
  selector:
    app: lugx-frontend
  ports:
    - protocol: TCP
      port: 80          
      targetPort: 80    
      #nodePort: 30081
