frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lugx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lugx-frontend
                port:
                  number: 80
